src/test/deca/context/invalid/class/2_accesProtected.deca
/* Description:
    Tester l'accés au champs protégés d'une classe.

    Historique:
      cree le 20/01/2020
    Sortie attendue:

*/

class Test{
    protected float a;
}

{
	Test classe = new Test();
  classe.a = 0;
}
